# Taller-Parametrico-Naval-C-

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .ninja_deps  CMakeLists.txt  CMakePresets.json  DEPLOY.md  DOCUMENTACION_WXWIDGETS.md  LICENSE  QUICKSTART.md  README.md  THIRD_PARTY_NOTICES.md  WXWIDGETS_GUIA.md  build.bat  build_all.sh  build_complete.sh  build_gui.sh  build_gui_only.sh  build_with_wxwidgets.sh  deploy.sh  fix_accents.py  fix_build.sh  fix_cmake.sh  install_manifest.txt  install_wxwidgets.sh  setup_and_build.sh  test.ninja  test2.ninja  test_build.ninja  uninstall.cmake  vcpkg.json  wx.bat
.cache/clangd/index/: Boat.cpp.8F51D7C4AF672284.idx  Boat.hpp.A147C672B2A7E523.idx  CSVExporter.cpp.3F1E762A13EA2ABC.idx  CSVExporter.hpp.D75B6B0389566A5E.idx  Camera.cpp.5AC6AE374E80005A.idx  Camera.hpp.B16CF905FEC1CCC6.idx  EditorCommand.hpp.ECBF3525A0B15B00.idx  EditorPanel.cpp.96019E7FE762FE93.idx  EditorPanel.hpp.84A7C0B5E239671F.idx  Enums.hpp.CF1A8AFF8CB5991A.idx  EquationRenderer.cpp.2AA156C604F8E435.idx  EquationRenderer.hpp.D8301A5BC191F36C.idx  ExperimentService.cpp.01CC6F677C2E3738.idx  ExperimentService.hpp.887C7E7792A64A5E.idx  ExpressionParser.hpp.6F1DDCBCE14CED15.idx  IRenderingContext.hpp.577D2235AB16FC70.idx  Integrators.cpp.4C1B57F2E4AFCBC3.idx  Integrators.hpp.5BB3ED2B0A840BE4.idx  LatexBitmapPanel.cpp.616519AB6AA86FB2.idx  LatexBitmapPanel.hpp.559BBAE89A4208FE.idx  Logger.cpp.60056B5730D51570.idx  Logger.hpp.DE40DB3B210AD837.idx  MainWindow.cpp.C9F2FC2A95F5E36D.idx  MainWindow.hpp.8C19EE2F3A4CE108.idx  MathExpression.hpp.0C0F7837A7A19B26.idx  MathGraph.cpp.8ACD0891237223DC.idx  MathGraph.hpp.D931A279E47B96D6.idx  MathHtmlPanel.cpp.27B52C6BD5AA538A.idx  MathHtmlPanel.hpp.8F9B1349B61EE0F2.idx  Motor.cpp.AC50228D96B99632.idx  Motor.hpp.3284FAB694DB4B8C.idx  PhysicsModel.cpp.2054B4322474CE3A.idx  (+350 more)
assets/presets/: 01_rio_corriente_uniforme.txt  02_remolino_central.txt  03_canal_obstaculo.txt  04_zona_turbulenta.txt  05_laberinto_canales.txt  06_zona_rapidos.txt  07_efecto_venturi.txt  08_puerto_rompeolas.txt  09_corrientes_capas.txt  10_corriente_oscilatoria.txt  11_espiral_caracol.txt
assets/theory/: index.json
assets/web/: theory_base.html
data/scenarios/: example_river_uniform.json  example_vortex.json  scenario_channel_obstacle.json  scenario_double_vortex.json  scenario_ocean_waves.json  scenario_turbulence.json
docs/: ARCHITECTURE.md  ARCHITECTURE_CONSOLIDATED.md  BUILD_WINDOWS.md  BUTTON_VERIFICATION.md  CHANGELOG.md  CODE_AUDIT.md  COMPARATIVA_ECOSISTEMAS.md  HANDLERS_AUDIT.md  INDEX.md  PRODUCT.md  PROFESSIONALIZATION_ROADMAP.md  REFACTORING_SUMMARY.md  ROADMAP.md  THEORY_MODULE.md  WXWIDGETS_GUIA.md  architecture_proyecto_cpp_taller_parametrico.md  math_and_simulation_proyecto_cpp_taller_parametrico.md
installer/: LICENSE.rtf  README.md  TallerParametrico.wxs  Variables.wxi
scripts/: build.sh  generate_theory_figures.py  run_all_tests.sh
src/app/: CMakeLists.txt  TallerParametrico.exe.manifest  TallerParametrico.rc  console_main.cpp  main.cpp
src/application/: CMakeLists.txt  ExperimentService.cpp  ExperimentService.hpp  PresetFileRepository.cpp  PresetFileRepository.hpp  ScenarioDocument.cpp  ScenarioDocument.hpp  SimulationCoordinator.cpp  SimulationCoordinator.hpp  UserPreferences.cpp  UserPreferences.hpp
src/domain/: Boat.cpp  Boat.hpp  CMakeLists.txt  MathExpression.hpp  Motor.cpp  Motor.hpp  Scenario.cpp  Scenario.hpp  VectorField.cpp  VectorField.hpp
src/education/: CMakeLists.txt  TheoryCatalog.cpp  TheoryCatalog.hpp  TheoryHtmlTemplate.cpp  TheoryHtmlTemplate.hpp  TheoryMarkdownRenderer.cpp  TheoryMarkdownRenderer.hpp  TheoryRepository.cpp  TheoryRepository.hpp  TheoryTopic.hpp
src/export/: CMakeLists.txt  CSVExporter.cpp  CSVExporter.hpp  JSONExporter.cpp  JSONExporter.hpp
src/persistence/: CMakeLists.txt  ScenarioLoader.cpp  ScenarioLoader.hpp  ScenarioSaver.cpp  ScenarioSaver.hpp
src/presentation/: CMakeLists.txt
src/presentation/main_window/: MainWindow.cpp  MainWindow.cpp.backup  MainWindow.hpp  MainWindowDocument.cpp  MainWindowIds.hpp  MainWindowSimulation.cpp  MainWindowStyles.hpp  MainWindowView.cpp
src/presentation/panels/: BottomPanel.cpp  BottomPanel.hpp  EditorCommand.hpp  EditorPanel.cpp  EditorPanel.hpp  FieldEditorPanel.cpp  FieldEditorPanel.hpp  LeftPanel.cpp  LeftPanel.hpp  RightPanel.cpp  RightPanel.hpp  TheoryPanel.cpp  TheoryPanel.hpp
src/presentation/widgets/: Camera.cpp  Camera.hpp  EquationPanel.hpp  EquationRenderer.cpp  EquationRenderer.hpp  FieldArrowSampler.cpp  FieldArrowSampler.hpp  IRenderingContext.hpp  LatexBitmapPanel.cpp  LatexBitmapPanel.hpp  MathGraph.cpp  MathGraph.hpp  MathHtmlPanel.cpp  MathHtmlPanel.hpp  MathRenderer.hpp  Rendering2D.hpp  Rendering2DContext.cpp  Rendering3D.hpp  Rendering3DContext.cpp  RenderingFactory.cpp  SimpleGraph.cpp  SimpleGraph.hpp  SimulationCanvas.cpp  SimulationCanvas.hpp  TheoryGraphFactory.cpp  TheoryGraphFactory.hpp  ToastNotification.cpp  ToastNotification.hpp  VideoExporter.cpp  VideoExporter.hpp  Water3DCanvas.cpp  Water3DCanvas.hpp  WaterAnimationSystem.cpp  WaterAnimationSystem.hpp  WaterParticleSystem.cpp  WaterParticleSystem.hpp  WaterRenderer.cpp  WaterRenderer.hpp  WaterSurface.cpp  WaterSurface.hpp
src/rendering/: CMakeLists.txt
src/shared/: CMakeLists.txt  Constants.hpp  Enums.hpp  ExpressionParser.hpp  Logger.cpp  Logger.hpp  TraceLogger.cpp  TraceLogger.hpp  Vec2.hpp
src/simulation/: CMakeLists.txt
src/simulation/integrators/: Integrators.cpp  Integrators.hpp
src/simulation/models/: PhysicsModel.cpp  PhysicsModel.hpp
src/simulation/runner/: SimulationRunner.cpp  SimulationRunner.hpp
tests/: CMakeLists.txt
tests/application/: CMakeLists.txt  test_experiment_service.cpp  test_simulation_coordinator.cpp
tests/domain/: CMakeLists.txt  test_boat.cpp  test_boat_extended.cpp  test_motor.cpp  test_scenario.cpp  test_vector_field.cpp
tests/integration/: CMakeLists.txt  test_preset_scenarios.cpp
tests/simulation/: CMakeLists.txt  test_integrators.cpp  test_integrators_convergence.cpp  test_physics.cpp
(+110 files in other folders)
